https://github.com/subshare/subshare/issues/77
Added missing --add-opens.